JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre4

Thanks to Ryan Fowler and Ryan Grove for contributing to this release.

{{{ Syntax Highlighting

- Updated NSIS2 syntax highlighting (Ryan Grove).

- Modes from the user catalog file are checked first for a matching
  first line or file name glob (Ryan Fowler).

}}}
{{{ Scripting

- BeanShell 1.3b2 is now included. Improvements since 1.3a1 (which was
  included with jEdit 4.2pre3) include:

  - Properties style auto-allocation of variables.

    // foo is initially undefined
    foo.bar.gee = 42; 
    print( foo.bar.gee ); // 42

  - Scripted class support (with class keyword). Limitations:

    - Scripted classes may only extend other scripted classes
    - implement clauses are currently ignored
    - All Scripted classes appear as type bsh.This - they are
      effectively the same type of object.

  - The bsh.system object which is shared across Interpreter instances
    has been renamed "bsh.shared".  For backwards compatability it is
    still referenced as bsh.system as well.

  - All scripted objects now implement the standard object protocol of
    toString(), hashcode() and equals().

  - Various bug fixes and optimizations.

- Actions and dockables are now invoked in their own temporary
  namespace. This prevents memory leaks in code like this:

  antfarm = wm.getDockable("antfarm");
  antfarm.foo();
  // reference to 'antfarm' remains in global namespace, possibly
  // after the dockable is closed

}}}
{{{ User Interface

- Removed the "synchronized scrolling" option which hasn't actually
  worked since 4.2pre1 or 4.2pre2. If you liked this feature, you can
  write a plugin that does the same thing pretty easily.

}}}
{{{ Optimizations

- Faster regular expression search and replace.

}}}
{{{ Bug Fixes

- Changing the no modifier click action for the gutter didn't work.

- The 'jedit' script was not being created on Unix.

- Fixed AltGR key on certain JVMs that send it as Control+Alt.
